src/test/ui/issues/issue-5239-1.stderr
error[E0368]: binary assignment operation `+=` cannot be applied to type `&isize`
  --> $DIR/issue-5239-1.rs:4:30
   |
LL |     let x = |ref x: isize| { x += 1; };
   |                              -^^^^^
   |                              |
   |                              cannot use `+=` on type `&isize`
help: `+=` can be used on 'isize', you can dereference `x`
   |
LL |     let x = |ref x: isize| { *x += 1; };
   |                              ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0368`.
